--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <nav class="navi">
         	<div>
         		<a href="https://www.facebook.com/albeniraouf"  target="_blank" alt="Facebook"><img class="lis" src="img/fb.png" title="Facebook"  style="height: 100px;"></a>
-        		<a href="https://www.instagram.com/albeniraouf"  target="_blank"><img class="lis" src="img/insta.png" title="Instagram" style="height: 100px;"></a>
+        		<a href="https://www.instagram.com/albeniraouf"  target="_blank"><img class="lis" src="img/Insta.png" title="Instagram" style="height: 100px;"></a>
       			<a href="https://www.linkedin.com/in/albeniraouf"  target="_blank"><img class="lis" src="img/in.png" title="Linked In" style="height: 100px;"></a>
       		</div>
       		<div>
